--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
-{
-  "name": "tommybox-landing",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "^5.0.2",
-    "vite": "^4.5.0"
-  }
-}
+    {
+      "name": "tommybox-landing",
+      "version": "0.0.1",
+      "private": true,
+      "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview"
+      },
+      "dependencies": {
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "framer-motion": "^11.0.0",
+        "@supabase/supabase-js": "^2.39.7"
+      },
+      "devDependencies": {
+        "@vitejs/plugin-react": "^4.2.1",
+        "typescript": "^5.0.2",
+        "vite": "^4.5.0"
+      }
+    }
+    
